# watch-party

./: .gitignore  README.md  context.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  check_db.py  fix_db.py  pyproject.toml  restore_db.py  test_role_update.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  8a3f2e9b1c04_nullable_movie_external_url.py  d8720b47c441_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  collections.py  health.py  invites.py  libraries.py  movies.py  permissions.py  rooms.py  storage_providers.py  users.py
backend/app/core/: config.py  dependencies.py  exceptions.py  log_config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chat_message.py  collection.py  enums.py  hls_key.py  invite.py  library.py  movie.py  permission.py  room.py  room_member.py  storage_provider.py  user.py
backend/app/schemas/: __init__.py  base.py  invite.py  library.py  movie.py  permission.py  room.py  storage.py  user.py
backend/app/services/: permission.py  room_manager.py
backend/app/services/storage/: __init__.py  b2.py  base.py
backend/scripts/: create-admin.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_permissions.py  test_sync.py
docker/: .env.example  docker-compose.prod.yml  docker-compose.yml
docs/: api.md  architecture.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/admin/settings/: page.tsx
frontend/src/app/(app)/admin/settings/storage/: page.tsx
frontend/src/app/(app)/admin/users/: page.tsx
frontend/src/app/(app)/collection/[id]/: page.tsx
frontend/src/app/(app)/movie/[id]/: page.tsx
frontend/src/app/(app)/room/[id]/: page.tsx
frontend/src/app/(app)/rooms/: page.tsx
frontend/src/app/login/: login-form.tsx  page.tsx
frontend/src/app/register/: page.tsx  register-form.tsx
frontend/src/app/watch/[id]/: page.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/layout/: app-shell.tsx
frontend/src/components/media/: MovieCard.tsx
frontend/src/components/player/: PlayerControls.tsx  VideoPlayer.tsx  YouTubePlayer.tsx
scripts/: generate-keys.py
scripts/uploader/: README.md  cleanup.py  process.py  requirements.txt
