[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchparty-backend"
version = "0.1.0"
description = "Watch Party Platform — Private synchronized watch-party backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0,<0.116",
    "uvicorn[standard]>=0.30.0,<0.32",
    # Database (async PostgreSQL via Supabase)
    "sqlalchemy[asyncio]>=2.0.0,<3.0",
    "alembic>=1.13.0,<2.0",
    "asyncpg>=0.29.0,<0.30",
    # Validation & settings
    "pydantic>=2.8.0,<3.0",
    "pydantic-settings>=2.4.0,<3.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "python-multipart>=0.0.9,<0.1",
    # Encryption (AES-256-GCM for storage credentials, AES-128 for HLS keys)
    "cryptography>=43.0.0,<45.0",
    # Object storage (Backblaze B2 via S3-compatible API)
    "boto3>=1.34.0,<2.0",
    "aioboto3>=13.1.0",
    # HTTP client (for metadata providers: TMDB, OMDB)
    "httpx>=0.27.0,<0.28",
    # Structured logging
    "structlog>=24.4.0,<25.0",
    "rich>=13.7.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-passlib>=1.7.7",
    "types-boto3>=1.0.0",
]

[project.scripts]
watchparty-backend = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI uses function calls in defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "ENVIRONMENT=testing",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
